At it again on the structural wraps issue. Righting the wrong caused by the official BS3.0
The good news is that after a couple of iterations on this issue spurred on by the changes BS has made to it's column layout I feel we really have a solid base that has the least amount of changes to Genesis

--- a/assets/css/less/ft-header.less
+++ b/assets/css/less/ft-header.less
@@ -3,14 +3,18 @@
 // --------------------------------------------------
 
 .site-header {
-	padding: 40px 0;
+
+//	&:extend(.container all);
+
+	padding-top: 40px;
+	padding-bottom: 40px;
 
 	.title-area {
-		.make-column(6);
+		.make-lg-column(6);
 	}
 
 	.header-widget-area {
-		.make-column(6);
+		.make-lg-column(6);
 
 		> .widget {
 			line-height: 46px;
