--- a/assets/css/less/ft-subheader.less
+++ b/assets/css/less/ft-subheader.less
@@ -5,12 +5,14 @@
 // --------------------------------------------------
 
 .site-subheader {
+
+//	&:extend(.container);
+
 	background: #f9f9f9;
 	border-bottom: 1px solid #e8e8e8;
-	padding: 40px 0;
 
 	.subheader-area {
-		.make-column(6);
+		.make-lg-column(6);
 
 		h2 {
 			.font-size(26);
@@ -26,7 +28,7 @@
 	}
 
 	.subheader-widget-area {
-		.make-column(6);
+		.make-lg-column(6);
 	}
 
 }
